--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Raleway&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     border: none;
     }
 
+    body{
+        font-family: 'Cabin', sans-serif;        
+    }
+
+    h1, h2 {
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;         
+    }
+    
 
 
 
