--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,16 @@ body {
     background-color:whitesmoke;
 }
 
+header{
+    background-color: green;
+    color:white;
+}
+
+footer{
+    background-color: green;
+    color:white;
+}
+
 img {
     max-width: 100%;
     height: auto;
