--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,23 +10,48 @@ body {
     background-color:whitesmoke;
 }
 
+header{
+    background-color: green;
+}
 
+#name{
+    float: left;
+    font-size: 300%;       
+    line-height: 75px;  
+}
 
+#tabs{
+    font-size: 150%;
+    letter-spacing: 5px;
+    line-height: 75px;
+}
 
+#tabs li{
+    float: right;
+    list-style-type: none;
+    margin-right: 35px;
+}
 
+#tabs a{
+text-decoration: none;
+}
 
+#tabs a:hover{
+    border-bottom: 2px solid black;
+}
 
+.active{
+    border-bottom: 2px solid black;
+}
 
+#outer{
+    height: 400px;
+    width: 100%;
+    overflow: hidden;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+#hero-image{
+    height: 400px;
+    width: 100%;
+    background: url('../images/header.jpg') no-repeat center center;       
+}
