--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@
     }
 
 body {
-    background-color:whitesmoke;
+    background-color:white;
 }
 
 footer{
@@ -80,44 +80,18 @@ text-decoration: none;
     max-height: 300px;
     background: url('../images/location.jpg') no-repeat;
 }
-#tank{
-    max-width: 300px; 
-    max-height: 300px;    
-    }
-#clean{    
-    max-width: 300px; 
-    max-height: 300px;
-    align-self: center;
-}  
+.box-1-image{
+    max-width: 500px; 
+    max-height: 500px;   
+}
 
-#tank{
+.box-2-image{
     max-width: 300px; 
-    max-height: 300px;
-    background: url('../images/tank.jpg') no-repeat;
+    max-height: 300px;   
 }
 
 .box-2{
     width: 25%;     
-}
-
-#filter{
-    max-width: 300px; 
-    max-height: 300px;
-}
-
-#clean{
-    max-width: 300px; 
-    max-height: 300px;
-}
-
-#light{
-    max-width: 400px; 
-    max-height: 400px;
-}
-
-#substrate{
-    max-width: 400px; 
-    max-height: 400px;
 }
 #image{
     height: 200px;
