add max width and height to fish images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,13 +93,9 @@ text-decoration: none;
 .box-2{
     width: 25%;     
 }
-#image{
-    height: 200px;
-    width: 100%;
-    background: url('../images/Honey Gourami.jpg') no-repeat;
-}
-#neon{
-    max-width: 300px; 
-    max-height: 300px;
+
+.fish-image{
+    max-width: 400px; 
+    max-height: 400px;
 }
 
