--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,3 +128,15 @@ input {
     border: 2px solid black;
     padding-bottom: 2%;
 }
+
+#button{
+    background-color: white;
+    border: 2px solid black;
+    color: black;    
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 28px;
+    font-size: 15px;    
+    cursor: pointer;
+}
