--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Raleway&display=swap');
-
 *{
     margin: 0;
     padding: 0;
@@ -16,26 +14,34 @@ footer{
 
 /*header*/
 
+header, #name, #tabs li{
+    height: 75px;
+    background-color: green;
+}
+
 #name{
     float: left;
     font-size: 300%;       
-    line-height: 75px;      
+    line-height: 75px;   
+    color: white;   
 }
 
 #tabs{
     font-size: 150%;
     letter-spacing: 5px;
-    line-height: 75px;
+    line-height: 75px;    
 }
 
 #tabs li{
     float: right;
     list-style-type: none;
     margin-right: 35px;
+    
 }
 
 #tabs a{
 text-decoration: none;
+color: white;
 }
 
 #tabs a:hover{
@@ -57,22 +63,38 @@ text-decoration: none;
 /* home body page */
 
 .container-1 {
-    display: flex;      
+    display: flex;     
+    
 }
 
 .container-2{
-    display: flex;
-    
+    display: flex;   
+}
+
+.container-1 h3, .container-2 h3{
+    text-align: center;
+    font-size: 150%;
+    letter-spacing: 3px;
+    border-bottom: 5px solid black;
 }
 .container-1 div, .container-2 div{
     border: solid 1px black;    
     flex: 1;
     margin: 1em;
-    box-shadow: 0px 0px 10px 0px;
+    box-shadow: 0px 0px 10px 0px;   
+    
 }
 
 .box-1{
     width: 33%;
+}
+
+.box-1 > p{
+    color: grey;
+    border: 1px solid black;
+    margin: 1em;
+    text-align: center;
+    letter-spacing: 2px;    
 }
 
 #Location{
@@ -81,18 +103,30 @@ text-decoration: none;
     background: url('../images/location.jpg') no-repeat;
 }
 .box-1-image{
-    max-width: 500px; 
-    max-height: 500px;   
-}
+    width: 400px; 
+    height: 400px;
+    object-fit:scale-down;    
+    }    
 
 .box-2-image{
-    max-width: 300px; 
-    max-height: 300px;   
+    width: 400px; 
+    height: 400px;
+    object-fit:scale-down;
+    align-items: center;
+    justify-content: center;
 }
 
 .box-2{
     width: 25%;     
 }
+
+.box-2 > p{
+    color: grey;
+    border: 1px solid black;
+    margin: 1em;
+    text-align: center;
+    letter-spacing: 2px;
+    }
 
 .fish-image{
     max-width: 400px; 
@@ -134,9 +168,8 @@ input {
     border: 2px solid black;
     color: black;    
     text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    text-decoration: none;    
     padding: 10px 28px;
-    font-size: 15px;    
+    font-size: 10px;    
     cursor: pointer;
 }
