--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,11 +48,6 @@ color: white;
     border-bottom: 2px solid black;    
 }
 
-#outer{
-    height: 400px;
-    width: 100%;
-    overflow: hidden;
-}
 
 #hero-image{
     height: 400px;
@@ -82,7 +77,6 @@ color: white;
     flex: 1;
     margin: 1em;
     box-shadow: 0px 0px 10px 0px;   
-    
 }
 
 .box-1{
@@ -112,8 +106,6 @@ color: white;
     width: 400px; 
     height: 400px;
     object-fit:scale-down;
-    align-items: center;
-    justify-content: center;
 }
 
 .box-2{
@@ -131,6 +123,42 @@ color: white;
 .fish-image{
     max-width: 400px; 
     max-height: 400px;
+}
+
+/*Fish Tab*/
+.container-fish-1{
+    display: flex;
+}
+
+.box-fish {
+    width: 33%;
+}
+.container-fish-1 div {
+    border: solid 1px black;    
+    flex: 1;
+    margin: 1em;
+    box-shadow: 0px 0px 10px 0px;   
+}
+.container-fish-2{
+    display: flex;
+}
+
+.container-fish-2 div {
+    border: solid 1px black;    
+    flex: 1;
+    margin: 1em;
+    box-shadow: 0px 0px 10px 0px;   
+}
+
+.container-fish-3{
+    display: flex;
+}
+
+.container-fish-3 div {
+    border: solid 1px black;    
+    flex: 1;
+    margin: 1em;
+    box-shadow: 0px 0px 10px 0px;   
 }
 
 /*footer*/
