--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,9 +10,15 @@ body {
 
 footer{
     background-color: green;
+    height: 190px;
 }
 
 /*header*/
+
+h2 {
+    text-align: center;
+    border-bottom: 1px solid;
+}
 
 header, #name, #tabs li{
     height: 75px;
@@ -45,7 +51,7 @@ color: white;
 }
 
 #tabs a:hover{
-    border-bottom: 2px solid black;    
+    border-bottom: 2px solid white;    
 }
 
 
@@ -163,10 +169,6 @@ color: white;
 
 /*footer*/
 
-footer{
-    height: 150px;
-}
-
 #social-links{
     text-align: center;    
 }
@@ -198,6 +200,7 @@ input {
     text-align: center;
     text-decoration: none;    
     padding: 10px 28px;
+    margin-top: 5px;
     font-size: 10px;    
     cursor: pointer;
 }
