--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,8 +110,8 @@ color: white;
 
 .box-2-image{
     width: 400px; 
-    height: 400px;
-    object-fit:scale-down;
+    height: 400px;  
+    object-fit:scale-down;       
 }
 
 .box-2{
@@ -126,14 +126,16 @@ color: white;
     letter-spacing: 2px;
     }
 
-.fish-image{
-    max-width: 400px; 
-    max-height: 400px;
-}
-
 /*Fish Tab*/
 .container-fish-1{
     display: flex;
+}
+
+.container-fish-1 h2, .container-fish-2 h2, .container-fish-3 h2{
+    text-align: center;
+    font-size: 150%;
+    letter-spacing: 3px;
+    border-bottom: 5px solid black;
 }
 
 .box-fish {
@@ -165,6 +167,43 @@ color: white;
     flex: 1;
     margin: 1em;
     box-shadow: 0px 0px 10px 0px;   
+}
+
+.fish-image{
+    max-width: 400px; 
+    max-height: 300px;      
+}
+
+.fish-table{
+    text-align: center;
+}
+
+/*plant tab*/
+h3{
+    text-align: center;
+}
+
+.container-plant{
+    display: flex;
+}
+
+.container-plant div {
+    border: solid 1px black;    
+    flex: 1;
+    margin: 1em;
+    box-shadow: 0px 0px 10px 0px;   
+}
+
+.container-plant h2 {
+    text-align: center;
+    font-size: 150%;
+    letter-spacing: 3px;
+    border-bottom: 5px solid black;
+}
+.plant-image{
+    width: 400px; 
+    height: 400px;
+    object-fit:scale-down;
 }
 
 /*footer*/
