--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,13 +103,13 @@ color: white;
     background: url('../images/location.jpg') no-repeat;
 }
 .box-1-image{
-    width: 400px; 
+    width: 100%; 
     height: 400px;
     object-fit:scale-down;    
     }    
 
 .box-2-image{
-    width: 400px; 
+    width: 100%; 
     height: 400px;  
     object-fit:scale-down;       
 }
@@ -170,8 +170,8 @@ color: white;
 }
 
 .fish-image{
-    max-width: 400px; 
-    max-height: 300px;      
+    max-width: 100%;
+    max-height: 400px;      
 }
 
 .fish-table{
@@ -183,18 +183,18 @@ h3{
     text-align: center;
 }
 
-.container-plant{
+.container-plant-1{
     display: flex;
 }
 
-.container-plant div {
+.container-plant-1 div {
     border: solid 1px black;    
     flex: 1;
     margin: 1em;
     box-shadow: 0px 0px 10px 0px;   
 }
 
-.container-plant h2 {
+.container-plant-1 h2 {
     text-align: center;
     font-size: 150%;
     letter-spacing: 3px;
