--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ color: white;
 
 /* home body page */
 
+h1{
+    text-align: center;
+}
+
 .container-1 {
     display: flex;     
     
@@ -170,8 +174,8 @@ color: white;
 }
 
 .fish-image{
-    max-width: 100%;
-    max-height: 400px;      
+    width: 100%;
+    height: 300px;      
 }
 
 .fish-table{
