--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ footer{
     height: 190px;
 }
 
+.intro{
+    padding-left: 250px;
+    padding-right: 250px;
+    letter-spacing: 2px;
+}
 /*header*/
 
 h2 {
