changed widht of plant images from pixeld to percentages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ h3{
     border-bottom: 5px solid black;
 }
 .plant-image{
-    width: 400px; 
+    width: 100%; 
     height: 400px;
     object-fit:scale-down;
 }
