--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,10 +43,8 @@ header {
 
 #tabs li{
     float: right;
-    list-style-type: none;
-    margin-right: 35px;
-    
-}
+    list-style-type: none;  
+    }
 
 #tabs a{
     text-decoration: none;
@@ -85,8 +83,9 @@ h1{
     border: solid 1px black;    
     flex: 1;
     margin: 1em;
-    box-shadow: 0px 0px 10px 0px;   
+    box-shadow: 0px 0px 10px 0px;       
 }
+
 .box-1 > p{
     color: grey;
     border: 1px solid black;
@@ -105,10 +104,6 @@ h1{
     width: 100%; 
     height: 400px;  
     object-fit:scale-down;       
-}
-
-.box-2{
-    width: 25%;     
 }
 
 .box-2 > p{
@@ -132,9 +127,6 @@ h1{
     border-bottom: 5px solid black;
 }
 
-.box-fish {
-    width: 25%;
-}
 .container-fish-1 div {
     border: solid 1px black;    
     flex: 1;
@@ -164,8 +156,8 @@ h1{
 }
 
 .fish-image{
-    width: 100%;
-    height: 300px;      
+    width: 100%; 
+    object-fit:scale-up;         
 }
 
 table, th, td {
@@ -198,8 +190,7 @@ h3{
     border-bottom: 5px solid black;
 }
 .plant-image{
-    width: 100%; 
-    height: 400px;
+    width: 100%;     
     object-fit:scale-down;
 }
 
