--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,8 @@ footer{
 
 .intro{
     letter-spacing: 2px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 /*header*/
 
@@ -69,9 +71,8 @@ h1{
 }
 
 .container{
-    display: flex;     
-    
-}
+    display: flex;   
+    }
 
 .container h3, .container h3{
     text-align: center;
@@ -247,6 +248,13 @@ input {
     .intro, .box-1, .box-2, .container, table{   
             width: 100%;
             flex-flow: column wrap;
+    }
+ }
+
+ @media screen and (max-width: 450px) {
+
+    table{  
+        font-size: 65%;
     }
  }
 
