--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,14 +80,14 @@ h1{
     letter-spacing: 3px;
     border-bottom: 5px solid black;
 }
-.container div, .container div{
+.container div {
     border: solid 1px black;    
-    flex: 1;
-    margin: 1em;
+    flex: 1;   
+    margin: 1em; 
     box-shadow: 0px 0px 10px 0px;       
 }
 
-.box-1 > p{
+div > p{
     color: grey;
     border: 1px solid black;
     margin: 1em;
@@ -239,7 +239,7 @@ input {
 
    .intro, .box-1, .box-2, .container, table{   
         width: 100%;
-        padding: 0 auto;
+        padding: 0 auto;        
     }
 }
 
@@ -247,7 +247,7 @@ input {
 
     .intro, .box-1, .box-2, .container, table{   
             width: 100%;
-            flex-flow: column wrap;
+            flex-flow: column wrap;                       
     }
  }
 
