--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,15 +249,7 @@ input {
             width: 100%;
             flex-flow: column wrap;                       
     }
- }
-
- @media screen and (max-width: 450px) {
-
-    table{  
-        font-size: 65%;
-    }
- }
-
+}
 /* Fish Page responsive design*/
 
  @media screen and (max-width: 1200px) {
@@ -276,6 +268,12 @@ input {
      }
   }
 
+  @media screen and (max-width: 450px) {
+
+    table{  
+        font-size: 65%;
+    }
+  }
   /* Plant Page responsive design*/
 
  @media screen and (max-width: 1200px) {
@@ -286,10 +284,8 @@ input {
      }
  }
  
- @media screen and (max-width: 950px) {
- 
+ @media screen and (max-width: 950px) { 
     .intro, .container-plant-1{   
              width: 100%;
-             flex-flow: column wrap;
-     }
-  }
+             flex-flow: column wrap;}
+    }
