--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,8 +87,7 @@ h1{
     box-shadow: 0px 0px 10px 0px;       
 }
 
-div > p{
-    color: grey;
+div > p {    
     border: 1px solid black;
     margin: 1em;
     text-align: center;
@@ -216,6 +215,8 @@ h4{color: white;
 
 #Sign-up{
     float: left;
+    color: white;   
+    padding-left: 10px; 
 }
 
 input {
